--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@react-three/fiber": "^8.13.6",
+    "@react-three/drei": "^9.86.0",
+    "@react-three/fiber": "^8.14.3",
+    "@types/three": "^0.156.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "swiper": "^10.3.1",
     "three": "^0.155.0"
   },
   "devDependencies": {
