--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-three/drei": "^9.86.0",
     "@react-three/fiber": "^8.14.3",
+    "@studio-freight/lenis": "^1.0.25",
     "@types/three": "^0.156.0",
+    "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "split-type": "^0.3.3",
     "swiper": "^10.3.1",
     "three": "^0.155.0"
   },
